fix cart layout issues

--- a/app/assets/stylesheets/shoppers.scss
+++ b/app/assets/stylesheets/shoppers.scss
@@ -1,3 +1,7 @@
+.cart {
+  padding-bottom: 70px;
+}
+
 .cart-shopper-items {
   margin-top: 30px;
 }
